# the_hub_backend

./: .env  Cargo.toml  Dockerfile  FRONTEND.md  LICENSE  README.md  main.tf  package.json  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
migrations/2026-02-11-115844-0000_create_games/: up.sql
migrations/2026-03-02-081821-0000_add_image_link_column/: down.sql  up.sql
migrations/2026-03-02-141200-create_weekly_recaps/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs
src/db/: mod.rs
