[package]
name = "gamelibrary"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15"
diesel = { version = "2.1", features = ["mysql", "chrono"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
